# multisensor2

./: .gitignore  CMakeLists.txt  README.md  add-dependency.sh  flash.sh  sdkconfig  set-target.sh
components/adxl345/: CMakeLists.txt  Kconfig  adxl345.c  adxl345.h  idf_component.yml
components/ftp/: CMakeLists.txt  Kconfig  ftp.c  ftp.h  idf_component.yml
components/gps/: CMakeLists.txt  gps.c  gps.h  idf_component.yml
components/hw_serial/: CMakeLists.txt  hw_serial.c  hw_serial.h  idf_component.yml
components/lcd/: CMakeLists.txt  Kconfig  idf_component.yml  lcd.c  lcd.h  tmp.c
components/mhz19/: CMakeLists.txt  idf_component.yml  mhz19.c  mhz19.h
components/qmc5883l/: CMakeLists.txt  Kconfig  qmc5883l.c  qmc5883l.h
components/rtc_tiny/: CMakeLists.txt  idf_component.yml  rtc_tiny.c  (+1 more)
main/: CMakeLists.txt  Kconfig  MultiSensor2.c  config.c  config.h  idf_component.yml  lvgl_demo_ui.c  main.h  mqtt.c  mqtt.h  tcp_server.c  tcp_server.h  wifi_sntp.h
main/console/: bme_cmd.c  config_cmd.c  console.c  console.h  debug_cmd.c  ftp_cmd.c  gps_cmd.c  led_cmd.c  led_cmd.h  mhz19_cmd.c  mqtt_cmd.c  pwr_cmd.c  pwr_cmd.h  reset_cmd.c  rtc_cmd.c  scd4x_cmd.c  sd_cmd.c  sps30_cmd.c  tcp_cmd.c  wifi_cmd.c
main/console/include/: bme_cmd.h  config_cmd.h  console.h  debug_cmd.h  ftp_cmd.h  gps_cmd.h  mhz19_cmd.h  mqtt_cmd.h  reset_cmd.h  rtc_cmd.h  scd4x_cmd.h  sd_cmd.h  sps30_cmd.h  tcp_cmd.h
main/ui/: ui.h  ui_config.c  ui_config.h  ui_init.c  ui_init.h  ui_update.c  ui_update.h  ui_wifi.c
main/ui/include/: ui.h  ui_config.h  ui_init.h  ui_update.h
main/wifi/: wifi.c  wifi.h  wifi_cmd.c  wifi_scan.c  wifi_sntp.c
main/wifi/include/: wifi.h  wifi_cmd.h  wifi_scan.h
(+61 files in other folders)
